# easypysmb

./: .autoenv.zsh  .gitignore  Pipfile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yaml  release.yaml
easypysmb/: __init__.py  easypysmb.py
