[tool.poetry]
name = "easypysmb"
version = "0.1.0"
description = "Easy to use PySMB wrapper library"
authors = ["Philipp Schmitt <philipp@schmitt.co>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
pysmb = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
