[tool.poetry]
name = "easypysmb"
version = "1.4.4"
description = "Easy to use PySMB wrapper library"
authors = ["Philipp Schmitt <philipp@schmitt.co>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
pysmb = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
